[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/font/PixeloidMono-1G8ae.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/art/ui/icon_back_hover.png" type="Texture" id=2]
[ext_resource path="res://assets/art/ui/icon_back.png" type="Texture" id=3]
[ext_resource path="res://src/UI/SettingsMenu.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 36
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 18
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="SettingsMenuUI" type="Control"]
margin_right = 960.0
margin_bottom = 640.0
script = ExtResource( 4 )

[node name="MainPanel" type="Panel" parent="."]
margin_left = 8.0
margin_top = 8.0
margin_right = 952.0
margin_bottom = 632.0

[node name="BackPanel" type="Panel" parent="MainPanel"]
self_modulate = Color( 1, 1, 1, 0.454902 )
margin_left = -8.0
margin_top = -8.0
margin_right = 952.0
margin_bottom = 632.0

[node name="Sound" type="Label" parent="MainPanel"]
margin_left = 104.0
margin_top = 144.0
margin_right = 416.0
margin_bottom = 192.0
custom_fonts/font = SubResource( 1 )
text = "Sound Effects"
align = 1

[node name="Panel" type="Panel" parent="MainPanel/Sound"]
self_modulate = Color( 0.682353, 0.682353, 0.682353, 1 )
margin_left = 336.0
margin_right = 784.0
margin_bottom = 48.0

[node name="Music" type="Label" parent="MainPanel"]
margin_left = 104.0
margin_top = 232.0
margin_right = 416.0
margin_bottom = 276.0
custom_fonts/font = SubResource( 1 )
text = "Music"
align = 1
valign = 1

[node name="Panel" type="Panel" parent="MainPanel/Music"]
self_modulate = Color( 0.682353, 0.682353, 0.682353, 1 )
margin_left = 336.0
margin_right = 784.0
margin_bottom = 48.0

[node name="Label" type="Label" parent="MainPanel"]
margin_right = 944.0
margin_bottom = 56.0
custom_fonts/font = SubResource( 1 )
text = "Nothin' to see here..."
align = 1
valign = 1

[node name="QuitButton" type="Button" parent="MainPanel"]
margin_left = 320.0
margin_top = 536.0
margin_right = 624.0
margin_bottom = 592.0
custom_fonts/font = SubResource( 1 )
text = "Save & Quit"

[node name="Safety" type="Label" parent="MainPanel/QuitButton"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -144.0
margin_top = -68.0
margin_right = 144.0
margin_bottom = -43.0
custom_colors/font_color = Color( 0.713726, 0.0392157, 0.0392157, 1 )
custom_fonts/font = SubResource( 2 )
text = "Are you sure..? :("
align = 1
valign = 1

[node name="BackButton" type="TextureButton" parent="MainPanel"]
process_priority = 1
margin_right = 56.0
margin_bottom = 56.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 2 )
expand = true

[connection signal="pressed" from="MainPanel/QuitButton" to="." method="_on_quit"]
[connection signal="pressed" from="MainPanel/BackButton" to="." method="_on_back_pressed"]
